fix: display placeholder when clearing entries

--- a/src/styled.css
+++ b/src/styled.css
@@ -6,7 +6,7 @@
 }
 
 .cedit:empty::before {
-  position: absolute;
+  position: relative;
   content: attr(placeholder);
   background-color: transparent;
   cursor: text;
