fix: keep line breaks to <br> or \n
This should keep the original structure of the text be it an html string with <br> tags or a text input with line breaks using \n.

--- a/src/styled.css
+++ b/src/styled.css
@@ -3,6 +3,9 @@
   border: none;
   outline: none;
   line-height: 1.3;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: pre-line;
 }
 
 .cedit:empty::before {
