--- a/src/components/editor/styled.scss
+++ b/src/components/editor/styled.scss
@@ -31,33 +31,6 @@
   }
 }
 
-.cedit {
-  display: flex;
-  flex-direction: column;
-  cursor: text;
-}
-
-.cedit__content {
-  font-family: Arial, Helvetica, sans-serif;
-  border: none;
-  outline: none;
-  line-height: 1.3;
-  word-wrap: break-word;
-  word-break: break-all;
-  white-space: pre-line;
-
-  &:empty::before {
-    position: relative;
-    content: attr(placeholder);
-    background-color: transparent;
-    color: gray;
-  }
-
-  &:is([contenteditable='true']):before {
-    cursor: text;
-  }
-}
-
 .top {
   @include placement(flex-start);
 }
@@ -68,4 +41,35 @@
 
 .bottom {
   @include placement(flex-end);
+}
+
+.cedit {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border: 1px solid #f1f2f6;
+  padding: 2px 4px;
+  border-radius: 2px;
+  min-height: 60px;
+
+  &:focus-within {
+    outline: 2px solid #70a1ff;
+  }
+}
+
+.cedit__content {
+  font-family: Arial, Helvetica, sans-serif;
+  border: none !important;
+  outline: none !important;
+  line-height: 1.3;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: pre-line;
+
+  &:empty::before {
+    position: relative;
+    content: attr(placeholder);
+    background-color: transparent;
+    color: #999;
+  }
 }
