feat: added custom styles

--- a/src/styled.scss
+++ b/src/styled.scss
@@ -77,6 +77,6 @@
     position: relative;
     content: attr(placeholder);
     background-color: transparent !important;
-    color: #8e8e93;
+    opacity: 0.45;
   }
 }
