--- a/src/styled.scss
+++ b/src/styled.scss
@@ -52,7 +52,7 @@
   padding: 2px 4px;
   border-radius: 4px;
   min-height: 80px;
-  transition: border 0.3s;
+  transition: 0.3s;
 
   &:hover {
     border-color: #70a1ff;
